--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="./recipes/egg.html">Fried Egg</a></li>
+            <li><a href="./recipes/fried-egg.html">Fried Egg</a></li>
         </ul>
     </body>
 </html>
