Add descriptive alt for screen readers

--- a/recipes/fried-egg.html
+++ b/recipes/fried-egg.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Egg</h1>
-    <img src="../img/fried-egg.jpeg" width="512" height="341">
+    <img src="../img/fried-egg.jpeg" width="512" height="341" alt="A delicious freshly fried egg">
 </body>
 </html>
