Change first header to be more specific and add more headers

--- a/recipes/fried-egg.html
+++ b/recipes/fried-egg.html
@@ -5,7 +5,10 @@
     <title>Egg</title>
 </head>
 <body>
-    <h1>Egg</h1>
+    <h1>Fried Egg</h1>
     <img src="../img/fried-egg.jpeg" width="512" height="341" alt="A delicious freshly fried egg">
+    <h1>Description</h1>
+    <h1>Ingredients</h1>
+    <h1>Steps</h1>
 </body>
 </html>
