--- a/recipes/fried-egg.html
+++ b/recipes/fried-egg.html
@@ -8,6 +8,7 @@
     <h1>Fried Egg</h1>
     <img src="../img/fried-egg.jpeg" width="512" height="341" alt="A delicious freshly fried egg">
     <h1>Description</h1>
+    <p>A fried egg is a cooked dish made from one or more eggs which are removed from their shells and placed into a frying pan and fried. They are traditionally eaten for breakfast in many countries but may also be served at other times of the day.</p>
     <h1>Ingredients</h1>
     <h1>Steps</h1>
 </body>
