Add lists for ingredients and steps

--- a/recipes/fried-egg.html
+++ b/recipes/fried-egg.html
@@ -10,6 +10,20 @@
     <h1>Description</h1>
     <p>A fried egg is a cooked dish made from one or more eggs which are removed from their shells and placed into a frying pan and fried. They are traditionally eaten for breakfast in many countries but may also be served at other times of the day.</p>
     <h1>Ingredients</h1>
+    <ul>
+        <li>Egg</li>
+        <li>Vegetable oil</li>
+        <li>Salt(optional)</li>
+        <li>Pepper(optional)</li>
+    </ul>
     <h1>Steps</h1>
+    <ol>
+        <li>Pour oil on frying pan</li>
+        <li>Turn on the fire and wait for the oil to be little steamy</li>
+        <li>Drop the egg</li>
+        <li>Wait for the bottom of the egg to be brown to get crispy and salty result</li>
+        <li>Turn off the fire</li>
+        <li>Serve the fried egg</li>
+    </ol>
 </body>
 </html>
