Add anchor : instant noodles and potato fries

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/fried-egg.html">Fried Egg</a></li>
+            <li><a href="./recipes/instant-noodles.html">Instant Noodles</a></li>
+            <li><a href="./recipes/potato-fries.html">Potato Fries</a></li>
         </ul>
     </body>
 </html>
