Change fried-egg.html title to be more specific

--- a/recipes/fried-egg.html
+++ b/recipes/fried-egg.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Egg</title>
+    <title>How to Make Fried Egg</title>
 </head>
 <body>
     <h1>Fried Egg</h1>
