Add headings to potato-fries.html and instant-noodles.html

--- a/recipes/instant-noodles.html
+++ b/recipes/instant-noodles.html
@@ -5,6 +5,9 @@
     <title>How to Make Instant Noodles - Odin Recipes</title>
 </head>
 <body>
-    
+    <h1>How to Make Instant Noodles</h1>
+    <h1>Description</h1>
+    <h1>Ingredients</h1>
+    <h1>Steps</h1>
 </body>
 </html>
