--- a/recipes/potato-fries.html
+++ b/recipes/potato-fries.html
@@ -5,6 +5,9 @@
     <title>How to Make Potato Fries - Odin Recipes</title>
 </head>
 <body>
-    
+    <h1>How to Make Potato Fries</h1>
+    <h1>Description</h1>
+    <h1>Ingredients</h1>
+    <h1>Steps</h1>
 </body>
 </html>
