--- a/recipes/fried-egg.html
+++ b/recipes/fried-egg.html
@@ -5,7 +5,7 @@
     <title>How to Make Fried Egg - Odin Recipes</title>
 </head>
 <body>
-    <h1>Fried Egg</h1>
+    <h1>How to Make Fried Egg</h1>
     <img src="../img/fried-egg.jpeg" width="512" height="341" alt="A delicious freshly fried egg">
     <h1>Description</h1>
     <p>A fried egg is a cooked dish made from one or more eggs which are removed from their shells and placed into a frying pan and fried. They are traditionally eaten for breakfast in many countries but may also be served at other times of the day.(<a href="https://en.wikipedia.org/wiki/Fried_egg" rel="noreferrer noopener">Wikipedia</a>)</p>
