Add ingredients list and steps list for potato-fries.html

--- a/recipes/potato-fries.html
+++ b/recipes/potato-fries.html
@@ -10,6 +10,35 @@
     <h1>Description</h1>
     <p>French fries (North American English), chips (British English and other national varieties), finger chips (Indian English), french-fried potatoes, or simply fries are batonnet or allumette-cut deep-fried potatoes of disputed origin from Belgium or France. They are prepared by cutting potatoes into even strips, drying them, and frying them, usually in a deep fryer. Pre-cut, blanched, and frozen russet potatoes are widely used, and sometimes baked in a regular or convection oven; air fryers are small convection ovens marketed for frying potatoes. <a href="https://en.wikipedia.org/wiki/French_fries" rel="noopener noreferrer">(Wikipedia)</a></p>
     <h1>Ingredients</h1>
+    <ul>
+        <li>Potatoes</li>
+        <li>Flour</li>
+        <li>Salt</li>
+        <li>Vegetable Oil</li>
+        <li>Water</li>
+    </ul>
     <h1>Steps</h1>
+    <ol>
+        <li>Peel potatoes</li>
+        <li>Put potatoes on water</li>
+        <li>Rinse potatoes</li>
+        <li>Put away potatoes from water</li>
+        <li>Cut potatoes into pieces</li>
+        <li>Put potatoes on water with salt and boil it</li>
+        <li>Wait for the salt to be absorb by potatoes, you will notice the boiled potatoes become delicious when you eat it</li>
+        <li>Put the pieces of potato into filter and dry</li>
+        <li>Cover the pieces of potato with flour</li>
+        <li>Turn on the fire</li>
+        <li>Pour the vegetable oil and put the potatoes</li>
+        <li>Wait the potatoes to be hot</li>
+        <li>Turn off the fire</li>
+        <li>Dry the potatoes</li>
+        <li>Cover the potatoes with flour again</li>
+        <li>Turn on the fire</li>
+        <li>Wait for the oil to be steamy and hot</li>
+        <li>Deep fry the potatoes</li>
+        <li>Add some salt</li>
+        <li>Serve the potatoes</li>
+    </ol>
 </body>
 </html>
