Add img of a cook to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTq0lJnVH49UvdagO2LtROUK3e-i5azwTj6E2I-bgZGA&s" width="463" height="579" alt="A picture of a cool cook">
         <ul>
             <li><a href="./recipes/fried-egg.html">Fried Egg</a></li>
             <li><a href="./recipes/instant-noodles.html">Instant Noodles</a></li>
