Add anchor to all recipes html to go back to the main page

--- a/recipes/fried-egg.html
+++ b/recipes/fried-egg.html
@@ -25,5 +25,6 @@
         <li>Turn off the fire</li>
         <li>Serve the fried egg</li>
     </ol>
+    <p><a href="../index.html">Back to Homepage</a></p>
 </body>
 </html>
