--- a/recipes/instant-noodles.html
+++ b/recipes/instant-noodles.html
@@ -27,5 +27,6 @@
         <li>Stir noodles</li>
         <li>Serve noodles</li>
     </ol>
+    <p><a href="../index.html">Back to Homepage</a></p>
 </body>
 </html>
