--- a/recipes/potato-fries.html
+++ b/recipes/potato-fries.html
@@ -40,5 +40,6 @@
         <li>Add some salt</li>
         <li>Serve the potatoes</li>
     </ol>
+    <p><a href="../index.html">Back to Homepage</a></p>
 </body>
 </html>
