Change title, add imgs, add back to top anchor for more interactive homepage

--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Homepage</title>
+        <title>Homepage - Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTq0lJnVH49UvdagO2LtROUK3e-i5azwTj6E2I-bgZGA&s" width="463" height="579" alt="A picture of a cool cook">
+        <h1 id="header">Homepage</h1>
         <ul>
             <li><a href="./recipes/fried-egg.html">Fried Egg</a></li>
             <li><a href="./recipes/instant-noodles.html">Instant Noodles</a></li>
             <li><a href="./recipes/potato-fries.html">Potato Fries</a></li>
         </ul>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTq0lJnVH49UvdagO2LtROUK3e-i5azwTj6E2I-bgZGA&s" width="463" height="579" alt="A picture of a cool cook">
+        <p>A cool looking cook isn't it?</p>
+        <img src="https://i.kym-cdn.com/entries/icons/facebook/000/047/210/nah_id_win.jpg">
+        <a href="#header">Back to top</a>
     </body>
 </html>
